--- a/BookRepository/appsettings.json
+++ b/BookRepository/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection":  "server=(localdb)\\MSSQLLocalDB;database=BookRepositoryDB;Trusted_Connection=true"
+  }
 }
