Configure Jwt authentication and setup identity context

--- a/BookRepository/appsettings.json
+++ b/BookRepository/appsettings.json
@@ -6,6 +6,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection":  "server=(localdb)\\MSSQLLocalDB;database=BookRepositoryDB;Trusted_Connection=true"
+    "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;database=BookRepositoryDB;Trusted_Connection=true",
+    "IdentityConnection":  "server=(localdb)\\MSSQLLocalDB;database=Identity;Trusted_Connection=true;MultipleActiveResultSets=true"
   }
 }
