--- a/BookRepository/BookRepository.csproj
+++ b/BookRepository/BookRepository.csproj
@@ -7,6 +7,7 @@
     <IsPackable>false</IsPackable>
     <SpaRoot>ClientApp\</SpaRoot>
     <DefaultItemExcludes>$(DefaultItemExcludes);$(SpaRoot)node_modules\**</DefaultItemExcludes>
+    <UserSecretsId>74eec75d-a1e9-46bf-982b-568ce6891a98</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
