--- a/BookRepository/ClientApp/package.json
+++ b/BookRepository/ClientApp/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.0.2",
     "bootstrap": "^4.3.1",
     "jquery": "3.3.1",
-    "material-ui": "^0.20.2",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-bootstrap": "^0.24.4",
