--- a/BookRepository/ClientApp/package.json
+++ b/BookRepository/ClientApp/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.0.2",
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
     "jquery": "3.3.1",
+    "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-bootstrap": "^0.24.4",
