--- a/BookRepository/appsettings.json
+++ b/BookRepository/appsettings.json
@@ -1,12 +1,14 @@
 {
   "Logging": {
+    "IncludeScopes": false,
     "LogLevel": {
-      "Default": "Warning"
+      "Default": "Debug",
+      "System": "Information",
+      "Microsoft": "Information"
     }
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=(localdb)\\MSSQLLocalDB;database=BookRepositoryDB;Trusted_Connection=true",
-    "IdentityConnection":  "server=(localdb)\\MSSQLLocalDB;database=Identity;Trusted_Connection=true;MultipleActiveResultSets=true"
+    "DefaultConnection": "server=db-server;database=BookRepositoryDB;User=sa;Password=Ajp12345"
   }
 }
